--- a/index.html
+++ b/index.html
@@ -17,13 +17,18 @@
             font-family: sans-serif;
         }
 
+        .dropdown-button,
+        .search-box {
+            display: none;
+        }
+
         nav,
         .dropdown-menu {
-            display: flex;
-            gap: 1rem;
             background-color: gray;
+            display: flex;
             align-items: center;
             justify-content: center;
+            gap: 1rem;
         }
 
         nav {
@@ -39,17 +44,18 @@
             background-color: yellow;
         }
 
-        nav>a:nth-child(2) {
-            order: 2;
+        /* place after everything */
+        nav>a:last-of-type {
+            order: 1;
         }
 
-        .dropdown> :not(.dropdown-menu) {
-            display: none;
-        }
+        @media screen and (max-width: 600px) {
+            .dropdown-menu {
+                display: none;
+            }
 
-        @media screen and (max-width: 900px) {
             .dropdown-button {
-                display: block !important;
+                display: block;
             }
 
             nav {
@@ -61,18 +67,15 @@
                 display: flex;
                 flex-direction: column;
                 gap: 1rem;
+                align-self: center;
             }
 
             .dropdown-button {
                 align-self: center;
             }
 
-            nav>a:nth-child(2) {
-                order: 0;
-            }
-
-            .dropdown> :not(.dropdown-button) {
-                display: none;
+            .dropdown:is(:hover, :focus) {
+                align-self: stretch;
             }
 
             .dropdown:is(:hover, :focus)>.dropdown-menu {
@@ -87,8 +90,12 @@
                 background-color: gray;
             }
 
-            .dropdown-menu>a {
+            nav a {
                 text-align: center;
+            }
+
+            nav>a:last-of-type {
+                order: 0;
             }
         }
     </style>
